# main.go
@@ -3,6 +3,7 @@ package main
 import (
 	"cost-guardian-api/handlers"
 
+	echojwt "github.com/labstack/echo-jwt"
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
 	echoSwagger "github.com/swaggo/echo-swagger"
@@ -24,18 +25,42 @@ import (
 
 // @host localhost:9000
 // @BasePath /api/v1
+
+// @schemes http
+// @Produces  application/json
+// @Consumes  application/json
+
+// @SecurityDefinitions.apikey Bearer
+// @in header
+// @name Authorization
+// @Scheme bearer
+// @BearerFormat JWT
 func main() {
 	e := echo.New()
 
 	g := e.Group("/api/v1")
+
+	g.Use(middleware.LoggerWithConfig(middleware.LoggerConfig{
+		Format: `[${time_rfc3339}]  ${status}  ${method}  ${host}${path} ${latency_human}` + "\n",
+	}))
+	g.Use(middleware.Recover())
 
 	g.Use(middleware.CORSWithConfig(middleware.CORSConfig{
 		AllowOrigins: []string{"*"},
 		AllowHeaders: []string{echo.HeaderOrigin, echo.HeaderContentType, echo.HeaderAccept},
 	}))
 
+	// @router /login [post]
+	// @Security ApiKeyAuth
+	g.POST("/login", handlers.Login)
+
+	// @router /swagger/* [get]
 	g.GET("/swagger/*", echoSwagger.WrapHandler)
 
+	g.Use(echojwt.JWT([]byte("secret")))
+
+	// @router /health [get]
+	// @security ApiKeyAuth
 	g.GET("/health", handlers.Health)
 
 	g.GET("/users", handlers.GetAllUsers)
