# models/user.go
@@ -1,5 +1,10 @@
 package models
 
+type AuthUser struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
+}
+
 type User struct {
 	ID       int    `json:"id"`
 	Name     string `json:"name"`
